--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -13,6 +13,15 @@
         android:id="@+id/topLayout"
         android:layout_height="wrap_content">
 
+        <Button
+            android:layout_width="wrap_content"
+            android:hint="Log out"
+            android:background="@drawable/frame"
+            android:layout_margin="5dp"
+            android:id="@+id/logout"
+            android:textColorHint="#487eb0"
+            android:layout_alignParentRight="true"
+            android:layout_height="wrap_content"></Button>
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_centerHorizontal="true"
@@ -47,7 +56,7 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:background="@color/coastalBreeze"
+        android:background="#f1f2f6"
         android:layout_height="match_parent"
         android:layout_below="@id/topLayout">
 
@@ -185,5 +194,36 @@
         </LinearLayout>
     </ScrollView>
 
+    <LinearLayout
+        android:id="@+id/bottomBar"
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:background="@color/kırıkbeyaz"
+        android:layout_height="70dp">
+        <ImageButton
+            android:id="@+id/homeButton"
+            android:background="@drawable/home_button_foreground"
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </ImageButton>
+
+        <ImageButton
+            android:id="@+id/forumButton"
+            android:background="@drawable/forum_button_foreground"
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </ImageButton>
+
+        <ImageButton
+            android:id="@+id/profileButton"
+            android:background="@drawable/profile_button_foreground"
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </ImageButton>
+
+    </LinearLayout>
 
 </RelativeLayout>
