--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -1,183 +1,177 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:id="@+id/homeScreenLayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/drawer"
     tools:context=".HomeScreen">
 
-    <ScrollView
-        android:layout_centerHorizontal="true"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
-        <RelativeLayout
-            android:orientation="vertical"
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-
             <RelativeLayout
-                android:id="@+id/topBar"
-                android:layout_width="wrap_content"
-                android:layout_height="80dp"
-                android:background="@color/kırıkbeyaz"
-                android:orientation="horizontal">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="60dp"
+                android:orientation="vertical">
 
                 <ImageView
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
+                    android:id="@+id/recipePhoto"
                     android:layout_centerHorizontal="true"
-                    android:background="@drawable/logo"
-                    ></ImageView>
+                    android:paddingTop="10dp"
+                    android:layout_width="300dp"
+                    android:layout_height="200dp">
+                </ImageView>
 
-                <ImageButton
-                    android:id="@+id/searchButton"
-                    android:layout_width="80dp"
+                <TextView
+                    android:id="@+id/rd_name"
+                    android:layout_below="@+id/recipePhoto"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="10dp"
+                    android:text="@string/description"
+                    android:textSize="25sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/rd_prep"
+                    android:layout_below="@+id/rd_name"
+                    android:padding="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/prep" />
+
+                <TextView
+                    android:id="@+id/rd_cook"
+                    android:layout_below="@+id/rd_prep"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="10dp"
+                    android:text="@string/cook" />
+
+                <TextView
+                    android:id="@+id/rd_servings"
+                    android:layout_below="@+id/rd_cook"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="10dp"
+                    android:text="@string/servings" />
+
+                <TextView
+                    android:id="@id/rd_ing_title"
+                    android:layout_below="@+id/rd_servings"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="10dp"
+                    android:text="@string/ingredients"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/rd_ingredients"
+                    android:layout_below="@+id/rd_ing_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:id="@+id/rd_inst_title"
+                    android:layout_below="@+id/rd_ingredients"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="10dp"
+                    android:text="@string/instructions"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/rd_instructions"
+                    android:layout_below="@+id/rd_inst_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <Button
+                    android:id="@+id/changeRecipeButton"
+                    android:layout_below="@+id/rd_instructions"
+                    android:layout_centerHorizontal="true"
+                    android:background="@drawable/button"
+                    android:hint="Get Random Recipe"
+                    android:textColorHint="#f1f2f6"
+                    android:layout_width="150dp"
+                    android:layout_height="50dp">
+                </Button>
+
+                <TextView
+                    android:layout_below="@+id/changeRecipeButton"
+                    android:layout_width="match_parent"
                     android:layout_height="80dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginRight="80dp"
-                    android:background="@drawable/search_button_foreground">
-                </ImageButton>
+                    android:text=" ">
 
-
-                <ImageButton
-                    android:id="@+id/addRecipeButton"
-                    android:layout_alignParentRight="true"
-                    android:background="@drawable/add_recipe_button_foreground"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp">
-                </ImageButton>
+                </TextView>
             </RelativeLayout>
+        </ScrollView>
 
-            <ImageView
-                android:id="@+id/recipePhoto"
-                android:layout_centerHorizontal="true"
-                android:layout_below="@+id/topBar"
-                android:paddingTop="10dp"
-                android:layout_width="300dp"
-                android:layout_height="200dp">
-            </ImageView>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/bottomBar"
+            android:layout_alignParentBottom="true"
+            android:layout_width="match_parent"
+            android:background="@color/kırıkbeyaz"
+            android:layout_height="70dp">
 
-            <TextView
-                android:id="@+id/rd_name"
-                android:layout_below="@+id/recipePhoto"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:text="@string/description"
-                android:textSize="25sp"
-                android:textStyle="bold" />
+            <ImageButton
+                android:id="@+id/forumButton"
+                android:layout_width="80dp"
+                android:layout_height="70dp"
+                android:layout_marginStart="11dp"
+                android:layout_marginLeft="11dp"
+                android:background="@drawable/forum_button_foreground"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/rd_prep"
-                android:layout_below="@+id/rd_name"
-                android:padding="10dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/prep" />
+            <ImageButton
+                android:id="@+id/homeButton"
+                android:layout_width="80dp"
+                android:layout_height="match_parent"
+                android:layout_marginStart="48dp"
+                android:layout_marginLeft="48dp"
+                android:layout_marginEnd="140dp"
+                android:layout_marginRight="140dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/forumButton"
+                app:layout_constraintTop_toTopOf="parent"
+                android:background="@drawable/home_button_foreground" />
 
-            <TextView
-                android:id="@+id/rd_cook"
-                android:layout_below="@+id/rd_prep"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:text="@string/cook" />
+            <ImageButton
+                android:id="@+id/profileButton"
+                android:layout_width="80dp"
+                android:layout_height="match_parent"
+                android:layout_marginStart="51dp"
+                android:layout_marginLeft="51dp"
+                android:background="@drawable/profile_button_foreground"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/homeButton"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </RelativeLayout>
 
-            <TextView
-                android:id="@+id/rd_servings"
-                android:layout_below="@+id/rd_cook"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:text="@string/servings" />
-
-            <TextView
-                android:id="@id/rd_ing_title"
-                android:layout_below="@+id/rd_servings"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:text="@string/ingredients"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/rd_ingredients"
-                android:layout_below="@+id/rd_ing_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"/>
-
-            <TextView
-                android:id="@+id/rd_inst_title"
-                android:layout_below="@+id/rd_ingredients"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:text="@string/instructions"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/rd_instructions"
-                android:layout_below="@+id/rd_inst_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"/>
-
-            <Button
-                android:id="@+id/changeRecipeButton"
-                android:layout_below="@+id/rd_instructions"
-                android:layout_centerHorizontal="true"
-                android:background="@drawable/button"
-                android:hint="Get Random Recipe"
-                android:textColorHint="#f1f2f6"
-                android:layout_width="150dp"
-                android:layout_height="50dp">
-
-            </Button>
-
-            <TextView
-                android:layout_below="@+id/changeRecipeButton"
-                android:layout_width="match_parent"
-                android:layout_height="80dp"
-                android:text=" ">
-
-            </TextView>
-        </RelativeLayout>
-    </ScrollView>
-
-    <LinearLayout
-        android:id="@+id/bottomBar"
-        android:layout_alignParentBottom="true"
+    <include
+        android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:background="@color/kırıkbeyaz"
-        android:layout_height="70dp">
-        <ImageButton
-            android:id="@+id/homeButton"
-            android:background="@drawable/home_button_foreground"
-            android:layout_weight="1"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        </ImageButton>
+        layout="@layout/content_home_screen"/>
 
-        <ImageButton
-            android:id="@+id/forumButton"
-            android:background="@drawable/forum_button_foreground"
-            android:layout_weight="1"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        </ImageButton>
+    <com.google.android.material.navigation.NavigationView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:id="@+id/navmenu"
+        app:menu="@menu/nav_menu"
+        app:headerLayout="@layout/nav_header"
+        android:layout_gravity="start"/>
 
-        <ImageButton
-            android:id="@+id/profileButton"
-            android:background="@drawable/profile_button_foreground"
-            android:layout_weight="1"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        </ImageButton>
 
-    </LinearLayout>
-
-</RelativeLayout>
+</androidx.drawerlayout.widget.DrawerLayout >
