--- a/app/src/main/res/layout/activity_outer_forum.xml
+++ b/app/src/main/res/layout/activity_outer_forum.xml
@@ -97,36 +97,49 @@
         android:layout_height="wrap_content"
         ></ListView>
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/bottomBar"
         android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:background="@color/kırıkbeyaz"
         android:layout_height="70dp">
-        <ImageButton
-            android:id="@+id/homeButton"
-            android:background="@drawable/home_button_foreground"
-            android:layout_weight="1"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        </ImageButton>
 
         <ImageButton
             android:id="@+id/forumButton"
+            android:layout_width="80dp"
+            android:layout_height="70dp"
+            android:layout_marginStart="11dp"
+            android:layout_marginLeft="11dp"
             android:background="@drawable/forum_button_foreground"
-            android:layout_weight="1"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        </ImageButton>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageButton
+            android:id="@+id/homeButton"
+            android:layout_width="80dp"
+            android:layout_height="match_parent"
+            android:layout_marginStart="48dp"
+            android:layout_marginLeft="48dp"
+            android:layout_marginEnd="140dp"
+            android:layout_marginRight="140dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/forumButton"
+            app:layout_constraintTop_toTopOf="parent"
+            android:background="@drawable/home_button_foreground" />
 
         <ImageButton
             android:id="@+id/profileButton"
+            android:layout_width="80dp"
+            android:layout_height="match_parent"
+            android:layout_marginStart="51dp"
+            android:layout_marginLeft="51dp"
             android:background="@drawable/profile_button_foreground"
-            android:layout_weight="1"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        </ImageButton>
-
-    </LinearLayout>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/homeButton"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </RelativeLayout>
