--- a/app/src/main/res/layout/activity_outer_forum.xml
+++ b/app/src/main/res/layout/activity_outer_forum.xml
@@ -25,7 +25,7 @@
             android:textStyle="bold"
             android:gravity="center"
             android:layout_marginTop="9dp"
-            android:textColor="#459">
+            android:textColor="#487eb0">
 
         </TextView>
 
