logout/login integration provided
Co-Authored-By: elifgoral <42415419+elifgoral@users.noreply.github.com>

--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -36,5 +36,9 @@
             android:id="@+id/miscellaneous"
             android:icon="@drawable/ic_miscellaneous"
             android:title="@string/miscellaneous" />
+        <item
+            android:id="@+id/signout"
+            android:icon="@drawable/sign_out_button_foreground"
+            android:title="Login Page" />
     </group>
 </menu>
